# qiskit-gym

./: README.md  agents.md  pyproject.toml
.github/workflows/: publish.yml
examples/: intro.ipynb
examples/models/: cliffordt_2q_v1.json  routing.json  routing_qc127_X16d256_v15.json  routing_qc127_X16d256_v15_migrated.json
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/envs/: channel3.rs  clifford.rs  common.rs  linear_function.rs  metrics.rs  mod.rs  pauli.rs  permutation.rs  routing.rs  symmetry.rs
rust/src/envs/routing/: config.rs  dag.rs  env.rs  generator.rs  graph.rs  mod.rs
rust/src/pauli/: mod.rs  pauli.rs  pauli_dag.rs  pauli_network.rs
src/qiskit_gym/: __init__.py
src/qiskit_gym/envs/: __init__.py  clifford_t.py  pauli_network.py  routing.py  synthesis.py
src/qiskit_gym/rl/: __init__.py  configs.py  routing.py  synthesis.py
